fix padding fot byoprgaphy list

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,7 +208,7 @@ body{
 .biography .biography__content .biography__text .biography__text-list{
     margin: 0;
     list-style-type: none;
-    padding-inline-start: 0;
+    padding-left: 0;
     -webkit-display: flex;
     -moz-display: flex;
     -ms-display: flex;
